# videotranscribe

./: .env.example  .gitignore  .replit  ASGI_SOLUTION.md  BRANCH_SUMMARY.md  DEPLOYMENT_FIX.md  PROXY_ENHANCEMENT.md  PROXY_IMPLEMENTATION.md  README.md  WORKFLOW_FIX_INSTRUCTIONS.md  admin_routes.py  app.py  app_main.py  app_main_fixed.py  asgi_deployment.py  auth.py  create_admin.py  demo_playlist.py  filters.py  flask_app.py  gunicorn_config.py  main.py  main_app.py  main_updated.py  main_wsgi_compatible.py  models.py  proxy_config.py  proxy_manager.py  pyproject.toml  replit.md  routes.py  run.py  run_asgi.py  run_fixed_server.py  run_server.py  server_main.py  setup_admin.py  simple_server.py  standalone_whisper.py  start_app.sh  (+15 more)
app/: __init__.py  requirements.txt  videotranscribe-ce.code-workspace
app/api/: download.py  progress_ws.py  transcribe.py  upload_legacy.py
app/core/: config.py  logging.py
app/models/: request.py  response.py
app/server/: app.py
app/services/: cache_service.py  whisper_service.py  youtube_service.py
app/tests/: test_caption_parser.py  test_transcribe.py
app/utils/: file_manager.py  xml_parser.py  youtube.py
attached_assets/: Cursorules-python-webapp_1756823490496.rtf  Pasted-You-are-an-expert-Python-backend-engineer-Using-the-latest-FastAPI-documentation-and-following-RFC--1747892711284.txt  Pasted-You-are-an-expert-Python-backend-engineer-Using-the-latest-FastAPI-documentation-and-following-RFC--1747983980078.txt
docs/: DEPLOYMENT.md  TROUBLESHOOTING.md
static/: batch.html  index.html  playlist.html  test.html
static/css/: style.css  styles.css
static/js/: batch.js  main.js  playlist.js  simple.js
templates/: admin_base.html  admin_dashboard.html  admin_oauth.html  admin_redirect.html  batch.html  dashboard.html  history.html  index.html  layout.html  login.html  notifications.html  playlist.html  settings.html  simple_download.html
tests/: test_backend_api.py  test_error_handling.py  test_frontend_errors.py  test_frontend_integration.py  test_progress_bar_e2e.py  test_transcription.py
youtube_transcription_tool.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
(+10 files in other folders)
