[project]
name = "youtube-transcription-tool"
version = "0.1.0"
description = "A FastAPI application for transcribing YouTube videos using captions or OpenAI Whisper"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.2",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "yt-dlp>=2025.4.30",
    "openai>=1.81.0",
    "httpx>=0.28.1",
    "requests>=2.32.3",
    "websockets>=15.0.1",
    "trafilatura>=2.0.0",
    "email-validator>=2.2.0",
    "asgiref>=3.9.1",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"
