[project]
name = "youtube-transcription-tool"
version = "0.1.0"
description = "A Flask application for transcribing YouTube videos using captions or OpenAI Whisper"
requires-python = ">=3.11"
dependencies = [
    "flask>=2.3.0",
    "uvicorn[standard]>=0.34.2",
    "pydantic>=2.11.4",
    "pydantic-settings>=2.9.1",
    "python-multipart>=0.0.20",
    "yt-dlp>=2025.4.30",
    "openai>=1.81.0",
    "httpx>=0.28.1",
    "requests>=2.32.3",
    "websockets>=15.0.1",
    "trafilatura>=2.0.0",
    "email-validator>=2.2.0",
    "asgiref>=3.9.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.2.0",
    "pytest-cov>=3.0.0",
    "requests_mock>=1.9.3",
    "black>=23.3.0",
    "isort>=5.10.1",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "pre-commit>=2.20.0",
    "selenium>=4.15.0",
]

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-dir]
app = "app"
